[gd_scene load_steps=7 format=3 uid="uid://ce88k3v757pab"]

[ext_resource type="Script" path="res://scenes/bar.gd" id="1_me6qm"]
[ext_resource type="Texture2D" uid="uid://qay44wwu2me7" path="res://assets/img/bar_bg.webp" id="2_d63gc"]
[ext_resource type="Texture2D" uid="uid://cu00d0331iqbr" path="res://assets/characters/barman.png" id="3_j5j46"]
[ext_resource type="PackedScene" uid="uid://m47064cxfa3k" path="res://scenes/transitions.tscn" id="3_k0uj0"]
[ext_resource type="Texture2D" uid="uid://dl8u2hk4yiw3a" path="res://assets/img/vesper_face.png" id="4_864yv"]
[ext_resource type="PackedScene" uid="uid://728fnim4yyl8" path="res://scenes/dialogue_label.tscn" id="5_wow6m"]

[node name="Bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_me6qm")

[node name="SceneBg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_d63gc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 253.0
offset_right = 448.0
offset_bottom = 635.0
theme_override_constants/separation = 25

[node name="TalkBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Talk"

[node name="DrinkBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Drink"

[node name="GoHomeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Go home"

[node name="InformationBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
disabled = true
text = "Information
(Cha 20+)"

[node name="Barman" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 563.0
offset_top = 177.0
offset_right = 1468.0
offset_bottom = 980.0
texture = ExtResource("3_j5j46")
expand_mode = 1

[node name="DialogBox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = -338.0
offset_right = -219.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="DialogBox"]
visible = false
layout_mode = 0
offset_left = -178.0
offset_top = -79.0
offset_right = 166.0
offset_bottom = 303.0
texture = ExtResource("4_864yv")
expand_mode = 1

[node name="DialogueLabel" parent="DialogBox" node_paths=PackedStringArray("dialogue_timer") instance=ExtResource("5_wow6m")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 21.0
offset_right = -55.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 40
text = "Type here"
messages = Array[String](["Welcome to Saint Patrick's.", "The place where nobody knows your name.", "It's a bar, they're not supposed to.", "-- END OF TALK ---"])
dialogue_timer = NodePath("")

[node name="NamePanel" type="Panel" parent="DialogBox"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 129.0
offset_top = -197.0
offset_right = -1132.0
offset_bottom = -147.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="DialogBox/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Vesper"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transitions" parent="." instance=ExtResource("3_k0uj0")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/TalkBtn" to="." method="_on_talk_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/GoHomeBtn" to="." method="_on_go_home_btn_pressed"]
